test/errors/e45.gm
Procedure test_nested_sum(G:Graph)
{
    Graph G2;
    //must not compile since default grah is not well-defined
    Edge e;
    Edge(G) e2 = e;
}
